--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </div>
 
       <div class="screen">
-        <span>399,981</span>
+        <span class="last-val">0</span>
+        <span class="new-val">0</span>
       </div>
 
       <div class="btns">
